2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/Makefile.am (demos): 
	* demos/gtk-demo/combobox.c: Add a demo showing combo box 
	variations.

	* demos/gtk-demo/Makefile.am (demos): 
	* demos/gtk-demo/pickers.c: Add a demo showing all picker widgets.

2005-05-24  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/iconview.c (do_iconview): Fix a typo.

2005-05-24  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkproperty-win32.c (gdk_screen_get_setting): Handle
	gtk-alternative-button-order (setting it to TRUE).

2005-05-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_search_init): Remove
	an unused variable.  (#305130, Jaap A. Haitsma)

	* gtk/gtkfilechooserdefault.c (filter_create): Don't grab
	the focus away from the file list when operating the filter
	combo with the pointer.  (#304844, Sven Neumann)

2005-05-23  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (handle_special): Map VK_APPS to
	GDK_Menu. (#172383, Ivan Wong)

	* gdk/win32/gdkkeys-win32.c (handle_dead): If the keysym isn't one
	of the special cases this function takes care of, use it as
	such. This takes care of for instance the Bengali Virama, see bug
	#165723.

2005-05-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimcontextsimple.c (check_table): Avoid a possible
	buffer overrun.  (#142444, Leonard Michlmayr)

	* gtk/gtkfilesystem.c: Remove C99-isms (#304879, 
	Kazuki IWAMOTO)

2005-05-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_remove_shortcut_folder_uri): 
	Use the correct function to conver the uri to a path.  (#304565,
	Ismael Juma)

	* gtk/gtkfilechooserbutton.c (dialog_response_cb): Handle the
	Cancel button properly.  (#304234, Sven Neumann)

2005-05-18  Anders Carlsson  <andersca@imendio.com>

	* gtk/gtktextview.c: (gtk_text_view_flush_scroll),
	(gtk_text_view_update_adjustments), (gtk_text_view_value_changed):
	* gtk/gtktextview.h: